--- a/GoogleUltra/App.xaml
+++ b/GoogleUltra/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="GoogleUltra.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GoogleUltra"
-             Startup ="App_Startup">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:GoogleUltra">
+<Application.Resources>
+    <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary>
+                <local:GoogleUltraBootstrapper x:Key="Bootstrapper"/>
+            </ResourceDictionary>
+        </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+</Application.Resources>
 </Application>
