--- a/GoogleUltra/Views/ShellView.xaml
+++ b/GoogleUltra/Views/ShellView.xaml
@@ -6,24 +6,26 @@
         mc:Ignorable="d" Background="Black"
         Title="ShellView" Height="450" Width="800">
     <Grid>
-        <Button x:Name="GetCurrentTrack" Content="Get current track" HorizontalAlignment="Left" Margin="55,46,0,0"
+        <Button x:Name="GetCurrentTrackData" Content="Get current track" HorizontalAlignment="Left" Margin="55,46,0,0"
                 VerticalAlignment="Top" Width="213" Height="20" />
         <TextBlock x:Name="CurrentTrackTitle" HorizontalAlignment="Left" Margin="309,49,0,0" TextWrapping="Wrap"
                    Text="Current track info" VerticalAlignment="Top" Width="330" Background="#FFD4CECE"
                    Grid.ColumnSpan="2" Height="16" />
-
-        <Image x:Name="CoverImage" HorizontalAlignment="Left" Margin="660,35,0,0" VerticalAlignment="Top" Width="330"
-               Grid.ColumnSpan="2" Height="100" />
+        
+        <Button x:Name="PlayRadio" Content="PlayRadio" HorizontalAlignment="Left" Margin="660,35,0,0" VerticalAlignment="Top" Width="90"
+                Grid.ColumnSpan="2" Height="30" />
 
         <Button x:Name="SearchOnGooglePlayBtn" Content="Search on google music" HorizontalAlignment="Left"
                 Margin="55,94,0,0" VerticalAlignment="Top" Width="213" Height="20" IsEnabled="True" />
-        <Button x:Name="AddToPlayList" Content="Add to playlist" HorizontalAlignment="Right" Margin="0,300,36.6,0"
+        <Button x:Name="AddToPlayList" Content="Add to playlist" HorizontalAlignment="Right" Margin="0,280,36.6,0"
                 VerticalAlignment="Top" Width="99" Height="56" />
-        <Button x:Name="PlayTrack" Content="Play track" HorizontalAlignment="Right" Margin="0,350,36.6,0"
-                VerticalAlignment="Top" Width="99" Height="56" IsEnabled="True" />
+        <Button x:Name="PlayGoogleMusicTrack" Content="Play" HorizontalAlignment="Right" Margin="0,330,36.6,0"
+                VerticalAlignment="Top" Width="99" Height="30" IsEnabled="True" />
+        <Button x:Name="StopGoogleMusicTrack" Content="Stop" HorizontalAlignment="Right" Margin="0,355,36.6,0"
+                VerticalAlignment="Top" Width="99" Height="30" IsEnabled="True" />
         
         <ListBox ItemsSource="{Binding TracksFound}" 
-                 SelectedItem="{Binding Highlightedtrack}"
+                 SelectedItem="{Binding HighlightedTrack}"
                  HorizontalAlignment="Left" Height="257" Margin="24,139,0,0" VerticalAlignment="Top" Width="590" Grid.ColumnSpan="2">
                 <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -49,5 +51,8 @@
                 </ComboBox.ItemTemplate> 
                 </ComboBox>
 
+
+        <Image x:Name="CoverImage" HorizontalAlignment="Left" Margin="660,35,0,0" VerticalAlignment="Top" Width="330"
+               Grid.ColumnSpan="2" Height="100" />
     </Grid>
 </Window>
